# netcdf-viewer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
isimip_viewer/: __init__.py  main.py
netcdf_viewer/: main.py
